# ros2_mobile_robotics_packages

astar_planing/: package.xml  setup.cfg  setup.py
astar_planing/astar_planing/: astar.py
f112th_sim_2501_alpha/: CMakeLists.txt  package.xml
f112th_sim_2501_alpha/config/: parms.yaml  twist_mux.yaml
f112th_sim_2501_alpha/description/: acker.urdf.xacro  lidar.xacro  properties.xacro  robot.urdf.xacro  robot_core.xacro  rviz_model.rviz
f112th_sim_2501_alpha/launch/: acker.launch.py  joystick.launch.py  launch_sim.launch.py  launch_sim_ackerman.launch.py  rsp.launch.py  twist_mux.launch.py
f112th_sim_2501_alpha/src/: laser_scan_reader.cpp
f112th_sim_2501_alpha/worlds/: 1frstworld.world  Track.stl  follow_gap.world  gapracetrack.world  my_world.world  pista.ipt  pista.stl  silverstone_track_finall.world
f112th_sim_2501_alpha/worlds/demo_race_track/: model.sdf
f112th_sim_2501_alpha/worlds/demo_race_track2/: model.config  model.sdf
f112th_sim_2501_alpha/worlds/interlagos_track/: model.sdf
f112th_sim_2501_alpha/worlds/monza_track/: model.sdf
f112th_sim_2501_alpha/worlds/objetracetrack/: model.config  model.sdf
f112th_sim_2501_alpha/worlds/obstaculos/: model.config  model.sdf
f112th_sim_2501_alpha/worlds/race_track_2/: model.config  model.sdf
f112th_sim_2501_alpha/worlds/race_track_gap/: model.config  model.sdf
f112th_sim_2501_alpha/worlds/racetrackgap/: model.config  model.sdf
f112th_sim_2501_alpha/worlds/silverstone/: model.config  model.sdf
navigation/: CMakeLists.txt  package.xml
navigation/config/: display_rviz.rviz  display_test_rviz.rviz  joystick.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
navigation/description/: acker.urdf.xacro
navigation/launch/: acker.launch.py  joystick.launch.py  launch_sim_ackerman.launch.py  launch_sim_ackerman_odom.launch.py  launch_sim_ackerman_odom_slam.launch.py  localization_launch.py  navigation_launch.py  navigator.launch.py  navigator_car.launch.py  online_async_launch.py  slam_localization_launch.py
navigation/src/: manual_odometry_node.cpp  manual_odometry_node_slam.cpp
navigation/worlds/: world_parcial.world
navigation/worlds/track_final/track_final/: model.config
pure_pursuit_tracking/: package.xml  setup.cfg  setup.py
pure_pursuit_tracking/pure_pursuit_tracking/: pure_pursuit.py
wall_following_alpha/: CMakeLists.txt  package.xml
wall_following_alpha/launch/: gap_following_alpha.launch.py  wall_following_alpha.launch.py
wall_following_alpha/src/: control_alpha.py  control_alpha_gap.py  dist_finder_alpha.py  gap_finder.py
(+7 files in other folders)
